--- a/gol-par/Makefile
+++ b/gol-par/Makefile
@@ -1,5 +1,5 @@
 gol-par: gol-par.c
-	gcc -Wall -O3 -o gol-par gol-par.c -lm
+	mpicc -Wall -O3 -o gol-par.o gol-par.c -lm
 
 clean:
-	rm -f *.o gol-par *~ *core
+	rm -f *.o gol-par.o *~ *core
