--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,5 +1,5 @@
 gol-seq: gol-seq.c
-	gcc -Wall -O3 -o gol-seq gol-seq.c -lm
+	gcc -Wall -O3 -o gol-seq.o gol-seq.c -lm
 
 clean:
-	rm -f *.o gol-seq *~ *core
+	rm -f *.o gol-seq.o *~ *core
