script improvment for args passing

--- a/gol-par/Makefile
+++ b/gol-par/Makefile
@@ -1,5 +1,8 @@
 gol-par: gol-par.c
 	mpicc -Wall -O3 -o gol-par.o gol-par.c -lm
 
+run: gol-par
+	mpirun gol-par.o a b c
+
 clean:
 	rm -f *.o gol-par.o *~ *core
