--- a/gol/Makefile
+++ b/gol/Makefile
@@ -4,5 +4,8 @@ gol-seq: gol-seq.c
 gol-par: gol-par.c
 	mpicc -Wall -O3 -o gol-par gol-par.c -lm
 
+goal-par: gol-par
+	prun -v -1 -np 16 -script $PRUN_ETC/prun-openmpi ./gol-par
+
 clean:
 	rm -f *.o *~ *core
