--- a/gol/Makefile
+++ b/gol/Makefile
@@ -4,8 +4,11 @@ gol-seq: gol-seq.c
 gol-par: gol-par.c
 	mpicc -Wall -O3 -o gol-par gol-par.c -lm
 
-goal-par: gol-par
-	prun -v -1 -np 16 -script $PRUN_ETC/prun-openmpi ./gol-par
+goal-par-das: gol-par
+	prun -v -1 -np 16 -script $PRUN_ETC/prun-openmpi ./gol-par 3000 3000 1000 0
+
+goal-par-loc: gol-par
+	mpirun -np 6 gol-par 3000 3000 1000 0
 
 clean:
 	rm -f *.o *~ *core
