--- a/gol/Makefile
+++ b/gol/Makefile
@@ -7,20 +7,8 @@ gol-par: gol-par.c
 gol-par-opt: gol-par-opt.c
 	mpicc -Wall -O3 -o gol-par-opt gol-par-opt.c -lm
 
-run-das5: gol-par
-	prun -v -1 -np 16 -script $PRUN_ETC/prun-openmpi ./gol-par 3000 3000 1000 0
-
-run-loc: gol-par
-	mpirun -np 6 gol-par 3000 3000 1000 0
-
-run-opt-das5: gol-par-opt
-	prun -v -1 -np 16 -script $PRUN_ETC/prun-openmpi ./gol-par-opt 4000 2000 1000 0
-
-run-opt-loc: gol-par-opt
-	mpirun -np 6 gol-par-opt 3000 3000 1000 0
-
-run-opt-loc-ph:
-	mpirun -np 6 gol-par-opt 4000 2000 1000 0
+gol-par-nbl: gol-par-nbl.c
+	mpicc -Wall -O3 -o gol-par-nbl gol-par-nbl.c -lm
 
 clean:
 	rm -f *.o *~ *core gol-par-opt gol-par gol-seq
